#122503962284351 : [BUG]- affichage détail d'un indicateur suite comparaison

--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -45,7 +45,7 @@
                     <h6 class="center-align" translate="stats.resumeTab.noData"></h6>
                 </div>
             </div>
-            <canvas ng-if="!noData" id="line" class="chart chart-line" chart-data="data"
+            <canvas ng-if="!noData" id="bar" class="chart chart-bar" chart-data="data"
                     chart-colours="colours" height="200"
                     chart-labels="labels" chart-legend="true" chart-series="series"
             >
