#122503962284351 : [BUG]- affichage détail d'un indicateur suite comparaison

--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -26,7 +26,9 @@
                 ng-if="!loading">
         </canvas>
         <div class="right-align ">
-            <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"></qaobee-stat-detail-modal>
+            <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"
+                                      periodicity-active="periodicityActive"
+            ></qaobee-stat-detail-modal>
         </div>
     </div>
     <div class="card-reveal">
