--- a/src/app/modules/sandbox/agenda/mainAgenda.html
+++ b/src/app/modules/sandbox/agenda/mainAgenda.html
@@ -96,7 +96,7 @@
         <!-- filter -->
         <form class="forms forms-inline input-field">
             <input type="text" id="query" class="grey lighten-4" ng-model="query">
-            <label for="query">{{'commons.buttons.filter' | translate }}</label>
+            <label for="query" translate="commons.buttons.filter"></label>
         </form>
     </div>
 
@@ -114,7 +114,7 @@
                 <div class="row center">
                     <a href="#/private/addEvent/{{effectiveId}}" class="blue-grey-text text-darken-1">
                         <i class="fa fa-plus-square-o fa-5x"></i>
-                        <h3>{{'mainAgenda.buttons.addEvent' | translate }}</h3>
+                        <h3 translate="mainAgenda.buttons.addEvent"></h3>
                     </a>
                 </div>
             </div>
