--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -15,7 +15,7 @@
         <div class="col s2">&nbsp;</div>
         
         <v-tabs class="tabs" horizontal active="activeTabIndex">
-            <v-tab class="tab" ng-click="changeTabDefault(0)"><a ng-href="" ng-class="{'active': activeTabIndex === 0}">{{'tabTeam.dashboard' | translate }}</a></v-tab>
+            <v-tab class="tab" ng-click="changeTabDefault(0)"><a ng-href="" ng-class="{'active': activeTabIndex === 0}" translate="tabTeam.dashboard"></a></v-tab>
             <v-tab class="tab" ng-click="changeTabDefault(1)"><a ng-href="" ng-class="{'active': activeTabIndex === 1}">{{'tabTeam.ListTeam' | translate }} ({{listTeamHome.length}})</a></v-tab>
         </v-tabs>
         
