--- a/src/app/modules/sandbox/effective/writeEffective.html
+++ b/src/app/modules/sandbox/effective/writeEffective.html
@@ -5,10 +5,10 @@
     <!-- Entete -->
     <div class="row">
         <div class="col s12">
-            <div class="row blue-grey darken-2 white-text center-align">
+            <div class="row colorMain white-text center-align">
                 <div ng-hide="addEffectiveTitle">
                     <div class="col s1">    
-                        <h5><i class="fa fa-pencil-square-o"></i></h5>
+                        <i class="material-icons md-36">mode_edit</i>
                     </div>
                     <div class="col s11">
                         <h5>{{'updateEffective.title' | translate }}</h5>
