Correction Bug stats

--- a/src/app/components/directives/widgets/podium/podium.html
+++ b/src/app/components/directives/widgets/podium/podium.html
@@ -1,5 +1,20 @@
 <!-- cup, championship, friendly game -->
-<div style="padding-top:20px;">
+<div ng-if="loading" class="center-align">
+    <div class="preloader-wrapper big active">
+        <div class="spinner-layer">
+            <div class="circle-clipper left">
+                <div class="circle"></div>
+            </div>
+            <div class="gap-patch">
+                <div class="circle"></div>
+            </div>
+            <div class="circle-clipper right">
+                <div class="circle"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="padding-top:20px;" ng-if="!loading">
         <div class="row center-align">
             <div class="col s4" style="background-image:url(/assets/images/trophy1.png); 
                                        background-repeat:no-repeat; 
